Sforce8 Project Data/src/objects/JMST__c.object
<CustomObject>
    <description>商品の消費税SETUP</description>
    <fields>
        <fullName>BeginDate__c</fullName>
        <defaultValue>DATE(1900,1,1)</defaultValue>
        <label>有効開始日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EndDate__c</fullName>
        <defaultValue>DATE(2999,12,31)</defaultValue>
        <label>有効終了日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TaxRate__c</fullName>
        <label>税率</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <label>消費税</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>すべて選択</label>
    </listViews>
    <nameField>
        <displayFormat>T-{0000}</displayFormat>
        <label>消費税マスタ名</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>